// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form renders properly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Form />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="form-control"
>
          <input
                    className="form-input"
                    onChange={[Function]}
                    placeholder="Title"
                    type="text"
                    value=""
          />
</div>,
        <div
          className="form-control"
>
          <textarea
                    className="form-textarea"
                    onChange={[Function]}
                    placeholder="Body"
                    value=""
          />
</div>,
        <div
          className="form-control"
>
          <input
                    className="form-input"
                    onChange={[Function]}
                    placeholder="Author"
                    type="text"
                    value=""
          />
</div>,
        <div
          className="form-select"
>
          <label>
                    publish
          </label>
          <select
                    name="publish"
          >
                    <option
                              onChange={[Function]}
                              value={false}
                    >
                              false
                    </option>
                    <option
                              value="true"
                    >
                              True
                    </option>
          </select>
</div>,
        <div
          className="submit"
>
          <button
                    className="btn-submit"
          >
                    Submit
          </button>
</div>,
      ],
      "className": "form",
      "onSubmit": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <input
              className="form-input"
              onChange={[Function]}
              placeholder="Title"
              type="text"
              value=""
/>,
            false,
          ],
          "className": "form-control",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "form-input",
              "onChange": [Function],
              "placeholder": "Title",
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          false,
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <textarea
              className="form-textarea"
              onChange={[Function]}
              placeholder="Body"
              value=""
/>,
            false,
          ],
          "className": "form-control",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "form-textarea",
              "onChange": [Function],
              "placeholder": "Body",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "textarea",
          },
          false,
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <input
              className="form-input"
              onChange={[Function]}
              placeholder="Author"
              type="text"
              value=""
/>,
            false,
          ],
          "className": "form-control",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "form-input",
              "onChange": [Function],
              "placeholder": "Author",
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          false,
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <label>
              publish
</label>,
            <select
              name="publish"
>
              <option
                            onChange={[Function]}
                            value={false}
              >
                            false
              </option>
              <option
                            value="true"
              >
                            True
              </option>
</select>,
          ],
          "className": "form-select",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "publish",
            },
            "ref": null,
            "rendered": "publish",
            "type": "label",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <option
                  onChange={[Function]}
                  value={false}
>
                  false
</option>,
                <option
                  value="true"
>
                  True
</option>,
              ],
              "name": "publish",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "false",
                  "onChange": [Function],
                  "value": false,
                },
                "ref": null,
                "rendered": "false",
                "type": "option",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "True",
                  "value": "true",
                },
                "ref": null,
                "rendered": "True",
                "type": "option",
              },
            ],
            "type": "select",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <button
            className="btn-submit"
>
            Submit
</button>,
          "className": "submit",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Submit",
            "className": "btn-submit",
          },
          "ref": null,
          "rendered": "Submit",
          "type": "button",
        },
        "type": "div",
      },
    ],
    "type": "form",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="form-control"
>
            <input
                        className="form-input"
                        onChange={[Function]}
                        placeholder="Title"
                        type="text"
                        value=""
            />
</div>,
          <div
            className="form-control"
>
            <textarea
                        className="form-textarea"
                        onChange={[Function]}
                        placeholder="Body"
                        value=""
            />
</div>,
          <div
            className="form-control"
>
            <input
                        className="form-input"
                        onChange={[Function]}
                        placeholder="Author"
                        type="text"
                        value=""
            />
</div>,
          <div
            className="form-select"
>
            <label>
                        publish
            </label>
            <select
                        name="publish"
            >
                        <option
                                    onChange={[Function]}
                                    value={false}
                        >
                                    false
                        </option>
                        <option
                                    value="true"
                        >
                                    True
                        </option>
            </select>
</div>,
          <div
            className="submit"
>
            <button
                        className="btn-submit"
            >
                        Submit
            </button>
</div>,
        ],
        "className": "form",
        "onSubmit": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <input
                className="form-input"
                onChange={[Function]}
                placeholder="Title"
                type="text"
                value=""
/>,
              false,
            ],
            "className": "form-control",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "form-input",
                "onChange": [Function],
                "placeholder": "Title",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            false,
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <textarea
                className="form-textarea"
                onChange={[Function]}
                placeholder="Body"
                value=""
/>,
              false,
            ],
            "className": "form-control",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "form-textarea",
                "onChange": [Function],
                "placeholder": "Body",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "textarea",
            },
            false,
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <input
                className="form-input"
                onChange={[Function]}
                placeholder="Author"
                type="text"
                value=""
/>,
              false,
            ],
            "className": "form-control",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "form-input",
                "onChange": [Function],
                "placeholder": "Author",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            false,
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <label>
                publish
</label>,
              <select
                name="publish"
>
                <option
                                onChange={[Function]}
                                value={false}
                >
                                false
                </option>
                <option
                                value="true"
                >
                                True
                </option>
</select>,
            ],
            "className": "form-select",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "publish",
              },
              "ref": null,
              "rendered": "publish",
              "type": "label",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <option
                    onChange={[Function]}
                    value={false}
>
                    false
</option>,
                  <option
                    value="true"
>
                    True
</option>,
                ],
                "name": "publish",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "false",
                    "onChange": [Function],
                    "value": false,
                  },
                  "ref": null,
                  "rendered": "false",
                  "type": "option",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "True",
                    "value": "true",
                  },
                  "ref": null,
                  "rendered": "True",
                  "type": "option",
                },
              ],
              "type": "select",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <button
              className="btn-submit"
>
              Submit
</button>,
            "className": "submit",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Submit",
              "className": "btn-submit",
            },
            "ref": null,
            "rendered": "Submit",
            "type": "button",
          },
          "type": "div",
        },
      ],
      "type": "form",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`Form when invalid form submission should render error 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Form />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="form-control"
>
          <input
                    className="form-input"
                    onChange={[Function]}
                    placeholder="Title"
                    type="text"
                    value=""
          />
          <div>
                    Invalid title
          </div>
</div>,
        <div
          className="form-control"
>
          <textarea
                    className="form-textarea"
                    onChange={[Function]}
                    placeholder="Body"
                    value=""
          />
          <div>
                    Invalid body
          </div>
</div>,
        <div
          className="form-control"
>
          <input
                    className="form-input"
                    onChange={[Function]}
                    placeholder="Author"
                    type="text"
                    value=""
          />
          <div>
                    Invalid author name
          </div>
</div>,
        <div
          className="form-select"
>
          <label>
                    publish
          </label>
          <select
                    name="publish"
          >
                    <option
                              onChange={[Function]}
                              value={false}
                    >
                              false
                    </option>
                    <option
                              value="true"
                    >
                              True
                    </option>
          </select>
</div>,
        <div
          className="submit"
>
          <button
                    className="btn-submit"
          >
                    Submit
          </button>
</div>,
      ],
      "className": "form",
      "onSubmit": [Function],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <input
              className="form-input"
              onChange={[Function]}
              placeholder="Title"
              type="text"
              value=""
/>,
            <div>
              Invalid title
</div>,
          ],
          "className": "form-control",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "form-input",
              "onChange": [Function],
              "placeholder": "Title",
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Invalid title",
            },
            "ref": null,
            "rendered": "Invalid title",
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <textarea
              className="form-textarea"
              onChange={[Function]}
              placeholder="Body"
              value=""
/>,
            <div>
              Invalid body
</div>,
          ],
          "className": "form-control",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "form-textarea",
              "onChange": [Function],
              "placeholder": "Body",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "textarea",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Invalid body",
            },
            "ref": null,
            "rendered": "Invalid body",
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <input
              className="form-input"
              onChange={[Function]}
              placeholder="Author"
              type="text"
              value=""
/>,
            <div>
              Invalid author name
</div>,
          ],
          "className": "form-control",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "form-input",
              "onChange": [Function],
              "placeholder": "Author",
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": "input",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Invalid author name",
            },
            "ref": null,
            "rendered": "Invalid author name",
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <label>
              publish
</label>,
            <select
              name="publish"
>
              <option
                            onChange={[Function]}
                            value={false}
              >
                            false
              </option>
              <option
                            value="true"
              >
                            True
              </option>
</select>,
          ],
          "className": "form-select",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "publish",
            },
            "ref": null,
            "rendered": "publish",
            "type": "label",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <option
                  onChange={[Function]}
                  value={false}
>
                  false
</option>,
                <option
                  value="true"
>
                  True
</option>,
              ],
              "name": "publish",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "false",
                  "onChange": [Function],
                  "value": false,
                },
                "ref": null,
                "rendered": "false",
                "type": "option",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "True",
                  "value": "true",
                },
                "ref": null,
                "rendered": "True",
                "type": "option",
              },
            ],
            "type": "select",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <button
            className="btn-submit"
>
            Submit
</button>,
          "className": "submit",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Submit",
            "className": "btn-submit",
          },
          "ref": null,
          "rendered": "Submit",
          "type": "button",
        },
        "type": "div",
      },
    ],
    "type": "form",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="form-control"
>
            <input
                        className="form-input"
                        onChange={[Function]}
                        placeholder="Title"
                        type="text"
                        value=""
            />
            <div>
                        Invalid title
            </div>
</div>,
          <div
            className="form-control"
>
            <textarea
                        className="form-textarea"
                        onChange={[Function]}
                        placeholder="Body"
                        value=""
            />
            <div>
                        Invalid body
            </div>
</div>,
          <div
            className="form-control"
>
            <input
                        className="form-input"
                        onChange={[Function]}
                        placeholder="Author"
                        type="text"
                        value=""
            />
            <div>
                        Invalid author name
            </div>
</div>,
          <div
            className="form-select"
>
            <label>
                        publish
            </label>
            <select
                        name="publish"
            >
                        <option
                                    onChange={[Function]}
                                    value={false}
                        >
                                    false
                        </option>
                        <option
                                    value="true"
                        >
                                    True
                        </option>
            </select>
</div>,
          <div
            className="submit"
>
            <button
                        className="btn-submit"
            >
                        Submit
            </button>
</div>,
        ],
        "className": "form",
        "onSubmit": [Function],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <input
                className="form-input"
                onChange={[Function]}
                placeholder="Title"
                type="text"
                value=""
/>,
              <div>
                Invalid title
</div>,
            ],
            "className": "form-control",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "form-input",
                "onChange": [Function],
                "placeholder": "Title",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Invalid title",
              },
              "ref": null,
              "rendered": "Invalid title",
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <textarea
                className="form-textarea"
                onChange={[Function]}
                placeholder="Body"
                value=""
/>,
              <div>
                Invalid body
</div>,
            ],
            "className": "form-control",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "form-textarea",
                "onChange": [Function],
                "placeholder": "Body",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "textarea",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Invalid body",
              },
              "ref": null,
              "rendered": "Invalid body",
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <input
                className="form-input"
                onChange={[Function]}
                placeholder="Author"
                type="text"
                value=""
/>,
              <div>
                Invalid author name
</div>,
            ],
            "className": "form-control",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "form-input",
                "onChange": [Function],
                "placeholder": "Author",
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": "input",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Invalid author name",
              },
              "ref": null,
              "rendered": "Invalid author name",
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <label>
                publish
</label>,
              <select
                name="publish"
>
                <option
                                onChange={[Function]}
                                value={false}
                >
                                false
                </option>
                <option
                                value="true"
                >
                                True
                </option>
</select>,
            ],
            "className": "form-select",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "publish",
              },
              "ref": null,
              "rendered": "publish",
              "type": "label",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <option
                    onChange={[Function]}
                    value={false}
>
                    false
</option>,
                  <option
                    value="true"
>
                    True
</option>,
                ],
                "name": "publish",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "false",
                    "onChange": [Function],
                    "value": false,
                  },
                  "ref": null,
                  "rendered": "false",
                  "type": "option",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "True",
                    "value": "true",
                  },
                  "ref": null,
                  "rendered": "True",
                  "type": "option",
                },
              ],
              "type": "select",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <button
              className="btn-submit"
>
              Submit
</button>,
            "className": "submit",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Submit",
              "className": "btn-submit",
            },
            "ref": null,
            "rendered": "Submit",
            "type": "button",
          },
          "type": "div",
        },
      ],
      "type": "form",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;
